--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "htmlWhitespaceSensitivity": "css",
   "insertPragma": false,
   "jsxSingleQuote": true,
-  "jsxBracketSameLine": true,
+  "jsxBracketSameLine": false,
   "printWidth": 120,
   "proseWrap": "preserve",
   "quoteProps": "as-needed",
