--- a/.prettierrc
+++ b/.prettierrc
@@ -11,6 +11,7 @@
   "quoteProps": "as-needed",
   "requirePragma": false,
   "semi": false,
+  "singleAttributePerLine": true,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
