--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.0",
     "glsl-random": "^0.0.5",
