--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.13",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.0",
     "glsl-random": "^0.0.5",
@@ -30,6 +29,7 @@
     "r3f-perf": "^6.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-merge-refs": "^2.0.1",
     "three": "^0.146.0",
     "three-stdlib": "^2.17.3"
