--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.0",
+    "@react-three/postprocessing": "^2.7.0",
     "glsl-random": "^0.0.5",
     "leva": "^0.9.34",
     "next": "^13.0.1",
