--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.0",
     "@react-three/postprocessing": "^2.7.0",
+    "framer-motion": "^8.0.2",
     "glsl-random": "^0.0.5",
     "leva": "^0.9.34",
     "next": "^13.0.1",
