--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-icons": "^4.7.1",
     "react-merge-refs": "^2.0.1",
     "three": "^0.146.0",
-    "three-stdlib": "^2.17.3"
+    "three-stdlib": "^2.17.3",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.1",
